# rotalabs-accel

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/kernels/activations/: index.html
api/kernels/gemm/: index.html
api/kernels/normalization/: index.html
api/kernels/rope/: index.html
api/modules/: index.html
api/quantization/: index.html
api/utils/: index.html
docs/: getting-started.md  index.md
docs/api/: index.md  modules.md  quantization.md  utils.md
docs/api/kernels/: activations.md  gemm.md  normalization.md  rope.md
getting-started/: index.html
search/: search_index.json
src/rotalabs_accel/: __init__.py  _version.py
src/rotalabs_accel/kernels/: __init__.py  activations.py  gemm.py  normalization.py  quantization.py  quantized_matmul.py  rmsnorm.py  rope.py  swiglu.py
src/rotalabs_accel/modules/: __init__.py
src/rotalabs_accel/quantization/: __init__.py
src/rotalabs_accel/speculative/: __init__.py  config.py  core.py  eagle.py  kv_compression.py  medusa.py  sampling.py  tree.py
src/rotalabs_accel/utils/: __init__.py  device.py
stylesheets/: extra.css
tests/: test_imports.py
